--- a/index.qmd
+++ b/index.qmd
@@ -4,4 +4,4 @@ title: "kiize.github.io"
 
 This is my personal page built with [Quarto](https://quarto.org/docs/websites).
 
-In [About me](about.qmd) you can find more informations about me, while in [Blog](posts/index.qmd) you can discover what I am working on and some linux commands I find useful.
+In [About](about.qmd) you can find more informations about me, while in [Blog](posts/index.qmd) you can discover what I am working on and some linux commands I find useful.
