use include for market crashes readme

--- a/posts/2025-12-16-market-crashes/index.qmd
+++ b/posts/2025-12-16-market-crashes/index.qmd
@@ -4,4 +4,4 @@ author: "Kiize"
 date: 2025-12-16
 ---
 
-![](https://kiize.github.io/Market_crashes)
+{{< include https://kiize.github.io/Market_crashes >}}
