--- a/posts/index.qmd
+++ b/posts/index.qmd
@@ -1,10 +1,10 @@
 ---
 title: "Projects"
 listing:
-  type: default
+  type: grid
   contents: .
   sort: "date desc"
-  fields: [title, description, date]
+  image-align: right
   image-placeholder: thumbnail.png
 ---
 
